made changes according to new ko schema
